--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ html{
 }
 #home::before{
     content:"";
-    background:url('hoarding.jpg') no-repeat  center center/cover;
+    background:url('./img/hoarding.jpg') no-repeat  center center/cover;
     background-size: cover;
     position: absolute;
     height: 60%;
